--- a/Day01_SpringBootDemo/src/main/resources/templates/test/index.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/test/index.html
@@ -2,6 +2,12 @@
 	
 	Hello world! This is test module index.
 	
+	<!-- 下载链接 -->
+	<h3>file downlod</h3>
+	<a href="/test/download?fileName=2008030.jpg">download file</a>
+	<br>
+	<p>==================================================================</p>
+	
 	<!-- 文件上传（form）框 -->
 	<h3>file upload</h3>
 	<p th:text="${message}"></p>
