--- a/Day01_SpringBootDemo/src/main/resources/templates/index.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/index.html
@@ -26,6 +26,11 @@
         
         <!-- Custom Theme Style -->
         <link th:href="${'../build/css/custom.min.css'}" rel="stylesheet" />       
+	
+		<!-- 引入js -->
+		<!-- layer -->
+		<script th:src="@{https://cdn.bootcss.com/layer/2.1/layer.js}"></script>
+	
 	</head>
 	
 	<!-- 碎片组装器 -->
