--- a/Day01_SpringBootDemo/src/main/resources/templates/account/login.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/account/login.html
@@ -1,1 +1,43 @@
-This is login page.
+<div>
+<!-- 	<a class="hiddenanchor" id="signup"></a> 
+	<a class="hiddenanchor"	id="signin"></a> -->
+
+	<div class="login_wrapper">
+		<div class="animate form">	<!--  login_form -->
+			<section class="login_content">
+				<form>
+					<h1>登&nbsp;&nbsp;&nbsp;&nbsp;录</h1>
+					<div>
+						<input id="userNameForLogin" name="userName" type="text" class="form-control" placeholder="Username" required="" />
+					</div>
+					<div>
+						<input id="passwordForLogin" name="password" type="password" class="form-control" placeholder="Password" required="" />
+					</div>
+					<div>
+						<a class="btn btn-default submit" href="index.html">登录</a> 
+						<a class="reset_pass" href="#">忘记密码？</a>
+					</div>
+
+					<div class="clearfix"></div>
+
+					<div class="separator">
+						<p class="change_link">
+							New to site? <a href="/account/register" class="to_register"> 注册 </a>
+						</p>
+
+						<div class="clearfix"></div>
+						<br />
+
+						<div>
+							<h1>
+								<i class="fa fa-paw"></i> ****信息交互式平台!
+							</h1>
+							<p>©2016 All Rights Reserved. MrSSS,This is a Bootstrap 3 template. Privacy and Terms</p>
+						</div>
+					</div>
+				</form>
+			</section>
+		</div>
+
+	</div>
+</div>
