--- a/Day01_SpringBootDemo/src/main/resources/templates/indexSimple.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/indexSimple.html
@@ -27,6 +27,11 @@
 	    <!-- <script th:src="@{http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js}"></script>   -->
 	    <!-- <script th:src="@{http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js}"></script> -->
 	    <!-- <script th:src="${'/js/sbDemo.js'}" type="text/javascript"></script> -->		
+		<!-- jQuery -->
+	    <script th:src="${'/vendors/jquery/dist/jquery.min.js'}" type="text/javascript"></script>
+		<!-- layer -->
+		<script th:src="@{https://cdn.bootcss.com/layer/2.1/layer.js}"></script>
+	
 	</head>
 	
 	<!-- 碎片组装器 -->
