--- a/Day01_SpringBootDemo/src/main/resources/templates/account/users.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/account/users.html
@@ -1,43 +1,183 @@
 <!-- jquery.dataTables -->
-<link th:href="cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" rel="stylesheet" >
+<link
+	th:href="@{http://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css}"
+	rel="stylesheet">
+
 <!-- Datatables -->
-<link th:href="/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet" >
+<link
+	th:href="${'/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css'}"
+	rel="stylesheet" />
 <!-- buttons.bootstrap -->
-<link th:href="/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet" >
+<link
+	th:href="${'/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css'}"
+	rel="stylesheet" />
 <!-- fixedHeader.bootstrap -->
-<link th:href="/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" rel="stylesheet" >
+<link
+	th:href="${'/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css'}"
+	rel="stylesheet" />
 <!-- responsive.bootstrap -->
-<link th:href="/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" rel="stylesheet" >
+<link
+	th:href="${'/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css'}"
+	rel="stylesheet" />
 <!-- scroller.bootstrap -->
-<link th:href="/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" rel="stylesheet" >
+<link
+	th:href="${'/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css'}"
+	rel="stylesheet" />
 
 
-This is users page
+<!-- page content -->
+<div class="right_col" role="main">
+	<div class="">
 
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net/js/jquery.dataTables.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-buttons/js/dataTables.buttons.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-buttons/js/buttons.flash.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-buttons/js/buttons.html5.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-buttons/js/buttons.print.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-responsive/js/dataTables.responsive.min.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js'}" type="text/javascript"></script>
-<!-- Datatables -->
-<script th:src="${'/vendors/datatables.net-scroller/js/dataTables.scroller.min.js'}" type="text/javascript"></script>
+		<div class="page-title">
+			<div class="title_left">
+				<h3>
+					Account/Users <small>This is users list</small>
+				</h3>
+			</div>
+
+			<!-- <div class="title_right">
+				<div
+					class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+					<div class="input-group">
+						<input type="text" class="form-control"
+							placeholder="Search for..."> <span
+							class="input-group-btn">
+							<button class="btn btn-secondary" type="button">Go!</button>
+						</span>
+					</div>
+				</div>
+			</div> -->
+		</div>
+
+		<div class="clearfix"></div>
+		
+		<div class="row">			
+			<div class="col-md-12 col-sm-12 ">
+				<div class="x_panel">
+					<!-- <div class="x_title">
+						<h2>
+							Default Example <small>Users</small>
+						</h2>
+						<ul class="nav navbar-right panel_toolbox">
+							<li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+							</li>
+							<li class="dropdown"><a href="#" class="dropdown-toggle"
+								data-toggle="dropdown" role="button" aria-expanded="false"><i
+									class="fa fa-wrench"></i></a>
+								<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+									<a class="dropdown-item" href="#">Settings 1</a> <a
+										class="dropdown-item" href="#">Settings 2</a>
+								</div></li>
+							<li><a class="close-link"><i class="fa fa-close"></i></a></li>
+						</ul>
+						<div class="clearfix"></div>
+					</div> -->
+					
+					<div class="x_title">
+						<ul class="nav panel_toolbox" style="margin-left: 0;float: left;">
+							<li>
+								<button type="button" class="btn btn-primary" id="addUserBtn"
+										data-toggle="modal" data-target="#userAddModal">新&nbsp;&nbsp;增</button>
+							</li>
+						</ul>
+						
+						<ul class="nav navbar-right panel_toolbox">
+							<li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+							</li>
+							<li class="dropdown"><a href="#" class="dropdown-toggle"
+								data-toggle="dropdown" role="button" aria-expanded="false"><i
+									class="fa fa-wrench"></i></a>
+								<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+									<a class="dropdown-item" href="#">Settings 1</a> <a
+										class="dropdown-item" href="#">Settings 2</a>
+								</div></li>
+							<li><a class="close-link"><i class="fa fa-close"></i></a></li>
+						</ul>
+						<div class="clearfix"></div>
+					</div>
+					
+					<div class="x_content">
+						<div class="row">
+							<div class="col-sm-12">
+								<div class="card-box table-responsive">
+									<!-- <p class="text-muted font-13 m-b-30">
+										用户列表的增删查改！
+									</p> -->
+									<table id="datatable" class="table table-striped table-bordered"
+										style="width: 100%">
+										<thead>
+											<tr>
+												<th>User Id</th>
+												<th>User Name</th>
+												<th>Password</th>
+												<th>Create Date</th>
+												<th>Operation</th>
+											</tr>
+										</thead>
+													
+										<tbody>
+											
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</div>
+
+<!-- replace到account下的userAdd页面，并且碎片的id指定为userAdd （碎片id	th:fragment="userAdd"） -->
+<div th:replace="account/userAdd :: userAdd"></div>
+
+<!-- jquery.dataTables -->
+<script
+	th:src="${'/vendors/datatables.net/js/jquery.dataTables.min.js'}"
+	type="text/javascript"></script>
+<!-- dataTables.bootstrap -->
+<script
+	th:src="${'/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js'}"
+	type="text/javascript"></script>
+<!-- dataTables.buttons -->
+<script
+	th:src="${'/vendors/datatables.net-buttons/js/dataTables.buttons.min.js'}"
+	type="text/javascript"></script>
+<!-- buttons -->
+<script
+	th:src="${'/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js'}"
+	type="text/javascript"></script>
+<script
+	th:src="${'/vendors/datatables.net-buttons/js/buttons.flash.min.js'}"
+	type="text/javascript"></script>
+<script
+	th:src="${'/vendors/datatables.net-buttons/js/buttons.html5.min.js'}"
+	type="text/javascript"></script>
+<script
+	th:src="${'/vendors/datatables.net-buttons/js/buttons.print.min.js'}"
+	type="text/javascript"></script>
+<!-- dataTables.fixedHeader -->
+<script
+	th:src="${'/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js'}"
+	type="text/javascript"></script>
+<!-- dataTables.keyTable -->
+<script
+	th:src="${'/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js'}"
+	type="text/javascript"></script>
+<!-- dataTables.responsive -->
+<script
+	th:src="${'/vendors/datatables.net-responsive/js/dataTables.responsive.min.js'}"
+	type="text/javascript"></script>
+<script
+	th:src="${'/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js'}"
+	type="text/javascript"></script>
+<!-- dataTables.scroller -->
+<script
+	th:src="${'/vendors/datatables.net-scroller/js/dataTables.scroller.min.js'}"
+	type="text/javascript"></script>
 
 <!--     
 	<script src="../vendors/jszip/dist/jszip.min.js"></script>
@@ -45,6 +185,180 @@ This is users page
     <script src="../vendors/pdfmake/build/vfs_fonts.js"></script>
  -->
 
+<script type="text/javascript">
+var DEFAULT_PAGE_SIZE = 5;
+
+$(document).ready(function(){
+	initTable(DEFAULT_PAGE_SIZE);
+	
+	$("#addUserBtn").bind("click",function(){
+		initUserAdd();
+	});
+	
+	$("#userAddBtn").bind("click",function(){
+		insertUser();
+	});
+	
+});
+
+//添加user
+function insertUser() {
+	var user = {};
+	user.userName = $("#userNameForAddPage").val();
+	user.password = $("#passwordForAddPage").val();
+	var roles = new Array();
+	//将每个checkbox的name值拿过来，做遍历，检查是否选中（checked）
+	$.each($("input[name='roleForAddPage']"), function(){
+		if(this.checked){
+			var role = {};
+			//将roleId给role对象
+			role.roleId = $(this).val();
+			//将role对象放到array里面
+			roles.push(role);
+		}
+	});
+	//将array对象放到user里面，user对象就有了role的信息了
+	user.roles = roles;
+	
+	$.ajax({
+		url : "/account/user",
+		type : "post",
+		contentType: "application/json",
+		data : JSON.stringify(user),
+		success : function (data) {
+			if (data.status == 200) {
+				initTable(DEFAULT_PAGE_SIZE);
+			} else {
+				layer.msg(data.message, {icon: 0});
+			}
+		},
+		error : function (data) {
+			layer.msg(data.responseText, {icon: 0});
+		}
+	});
+}
+
+	function initUserAdd(){
+		$("#userNameForAddPage").val("");
+		$("#passwordForAddPage").val("");
+		initRoles("rolesForAddPage","roleForAddPage");
+	}
+	
+	function initRoles(rolesDiv, roleName) {
+		$("#" + rolesDiv + "").empty();
+		$.ajax({
+			url : "/account/roles",
+			type : "get",
+			contentType: "application/json",
+			success : function (rs) {
+				$("#" + rolesDiv + "").append("<label class='middle'>");
+				$.each(rs, function(i, value) {
+					$("#" + rolesDiv + "").append("<input name='"+ roleName + "' value='" + 
+							value.roleId +"' type='checkbox'>" + value.roleName + "&nbsp;&nbsp;");
+				});
+				$("#" + rolesDiv + "").append("</label>");
+			},
+			error : function (data) {
+				layer.alert(data.responseText, {icon: 0});
+			}
+		});
+	}
+
+	function initTable(pageSize){
+		$("#datatable").DataTable({
+			'paging':true,//分页
+			"serverSide":true,//开启后端分页
+			"pagingType":"full_numbers",//分页样式的类型simple/simple_numbers/full/full_numbers
+			"pageLength":pageSize,//定义初始的页长(每页显示的数据条数)
+			"processing":true,//访问后台数据时，加载的旋转图标按钮
+			"destroy":true,//允许销毁替换，在表格重新查询时，可以自动销毁以前的data
+			'lengthChange':true,//控制是否能够调整每页的页数
+			'searching':true,//关键字查询
+			'data-show-refresh':true,//刷新
+			'ordering':true,//排序功能
+			'autoWidth':true,//自动的宽度（根据数据调整宽度）
+			"ajax":function(data,callback,settings){
+				//从data获取查询数据
+				var columIndex = data.order[0].column;
+				var sort = data.order[0].dir;//每一列进行的排序
+				var orderBy = data.columns[columIndex].name;//每一列开始排序
+				pageSize = data.length == undefined ? pageSize : data.length;
+				
+				//包装searchVo对象，后端需要
+				var searchVo = {}; 
+				searchVo.currentPage = (data.start / pageSize) + 1;//当前页
+				searchVo.pageSize = pageSize;
+				searchVo.orderBy = orderBy;
+				searchVo.sort = sort;
+				searchVo.keyWord = data.search.value;
+				
+				$.ajax({
+					url : "/account/users",
+					type : "post",
+					contentType : "application/json",
+					data : JSON.stringify(searchVo),//把包装好的searchVo对象转化成json字符串
+					success : function(rs){
+						var fData = {
+							draw : 0,//画多少
+							recordsTotal : 0,//总数有多少
+							recordsFiltered : 0,//过滤了多少
+							data : []
+						};
+						if(!rs){
+							Layer.alert("请求出错，请稍后再试"+rs.errmsg,{icon:2});
+							callback(fData);
+							return;
+						};
+						if(rs.list == null){
+							$('#rolesTable tbody tr').remove();
+							$('#loading').remove();
+							callback(fData);
+							return;
+						};
+						$('#loading').remove();
+						//多行组装起来的数组
+						var gearDatas = [];
+						for(var i = 0;i < rs.list.length;i++){
+							//包装行数据
+							var rowData = new TData(rs.list[i].userId,rs.list[i].userName,rs.list[i].password,rs.list[i].createDate);
+							//将行数据放到数组中
+							gearDatas.push(rowData);
+						}
+						fData.data = gearDatas;
+						fData.recordsTotal = rs.total;
+						fData.recordsFiltered = rs.total;
+						callback(fData);					
+					},
+					error : function(data){
+						layer.alert(data.responseText,{icon:0});
+					}					
+				});				
+			},
+			"columns" : [//定义行数据字段
+				{data:'userId',name:'user_id',sortable:true},
+				{data:'userName',name:'user_name',sortable:true},
+				{data:'password',name:'password',sortable:true},
+				{data:'creatDate',name:'creat_date',sortable:true},
+				{data:'operate',width:'80px',sortable:false}
+			]			
+		});
+	}
+	
+	//行数据结构
+	function TData(userId,userName,password,creatDate){
+		this.userId = userId;
+		this.userName = userName;
+		this.password = password;
+		this.creatDate = creatDate;
+		//data-toggle='modal'和data-target='#roleEditModal'是模态框
+		this.operate = function(){
+			return "<a href='#' class='btn-editcolor'  " +
+				" onclick='initEditModal(\""+ userId +"\")'>编辑</a>&nbsp;" +
+				"<a href='javascript:void(0);' onclick='deleteRole(\""+ userId +"\")' class='btn_editcolor'>删除</a>";
+		}
+	}
+	
+</script>
 
 
 
