--- a/Day01_SpringBootDemo/src/main/resources/templates/index.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/index.html
@@ -26,7 +26,8 @@
 	    <script th:src="${'/vendors/bootstrap/dist/js/bootstrap.bundle.min.js'}" type="text/javascript"></script>
 		<!-- layer -->
 		<script th:src="@{https://cdn.bootcss.com/layer/2.1/layer.js}"></script>
- 	    		
+ 	    <!-- 删除确认框-->
+    	<script th:src="${'/build/js/bootbox.js'}" type="text/javascript"></script>
 	
 	</head>
 	
