--- a/Day01_SpringBootDemo/src/main/resources/templates/fragments/sideBar.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/fragments/sideBar.html
@@ -37,8 +37,8 @@
 					</a>
 						<ul class="nav child_menu">
 							<li><a href="/account/users">Users</a></li>
-							<li><a href="index2.html">Roles</a></li>
-							<li><a href="index3.html">Resources</a></li>
+							<li><a href="/account/roles">Roles</a></li>
+							<li><a href="/account/resources">Resources</a></li>
 					</ul>
 				</li>
 				
