--- a/Day01_SpringBootDemo/src/main/resources/templates/index.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/index.html
@@ -28,6 +28,9 @@
 		<script th:src="@{https://cdn.bootcss.com/layer/2.1/layer.js}"></script>
  	    <!-- 删除确认框-->
     	<script th:src="${'/build/js/bootbox.js'}" type="text/javascript"></script>
+		<!-- 自定义js（main.js） -->
+   	    <script th:src="${'/build/js/main.js'}" type="text/javascript"></script>
+		
 	
 	</head>
 	
