--- a/Day01_SpringBootDemo/src/main/resources/templates/fragments/sideBar.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/fragments/sideBar.html
@@ -36,6 +36,7 @@
 						<span class="fa fa-chevron-down"></span>
 					</a>
 						<ul class="nav child_menu">
+							<li><a href="/account/profile">Profile</a></li>
 							<li><a href="/account/users">Users</a></li>
 							<li><a href="/account/roles">Roles</a></li>
 							<li><a href="/account/resources">Resources</a></li>
