--- a/Day01_SpringBootDemo/src/main/resources/templates/account/login.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/account/login.html
@@ -86,7 +86,7 @@
 		user.password = $("[name='password']").val();
 		user.rememberMe = $("[name='rememberMe']").prop('checked');
 		$.ajax({
-			url : "/account/login",
+			url : "/api/login",
 			type : "post",
 			contentType : "application/json",
 			data : JSON.stringify(user),
