--- a/Day01_SpringBootDemo/src/main/resources/templates/account/profile.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/account/profile.html
@@ -331,7 +331,7 @@
 $(document).ready(function() {
 	initFileInput();
 	
-	initUserProfile(3);
+	initUserProfile($("#userId").val());
 	
 	$("#profileEditBtn").bind("click", function(){
 		editProfile();
