--- a/Day01_SpringBootDemo/src/main/resources/templates/account/users.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/account/users.html
@@ -245,7 +245,8 @@ function deleteUser(userId) {
 					if (data.status == 200) {
 						initTable(DEFAULT_PAGE_SIZE);
 					} else {
-						layer.msg(data.message, {icon: 0});
+						window.location.href = data.object;
+						//layer.msg(data.message, {icon: 0});
 					}
 				},
 				error : function (data) {
@@ -322,10 +323,11 @@ function insertUser() {
 			if (data.status == 200) {
 				initTable(DEFAULT_PAGE_SIZE);
 			} else {
+				
 				layer.msg(data.message, {icon: 0});
 			}
 		},
-		error : function (data) {
+		error : function (data) {			
 			layer.msg(data.responseText, {icon: 0});
 		}
 	});
