--- a/Day01_SpringBootDemo/src/main/resources/templates/fragments/header.html
+++ b/Day01_SpringBootDemo/src/main/resources/templates/fragments/header.html
@@ -3,8 +3,12 @@
           <div class="nav_menu">
               <div class="nav toggle">
                 <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+                
               </div>
               <nav class="nav navbar-nav">
+              <input type="hidden" id="userId" th:value="${session.userId}" />
+              <!-- <span shiro:principal property="userId"/>
+				<span shiro:principal property="userName"/> -->
               <ul class=" navbar-right">
                 <li class="nav-item dropdown open" style="padding-left: 15px;">
                   <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
